<resources>
    <string name="app_name" translatable="false">HMServices samples</string>
    <string name="agregar_marker_al_mapa">Agregar marker al mapa</string>
    <string name="location_kit">Location Kit</string>
    <string name="map_kit">Map Kit</string>
    <string name="ver_documentaci_n"><u>Ver documentación</u></string>
    <string name="location_lat_long">Latitud: %1$s \n Longitud: %2$s</string>
    <string name="push_kit">Push Kit</string>
    <string name="pushkit_message_not_token"><![CDATA[The Obtain a token in the class <PushKitService>]]></string>
    <string name="notification_came_through_pushkit">A notification came through PushKit</string>
    <string name="get_token">Get token</string>
    <string name="subscribe_to_offers">Subscribe to offers</string>
    <string name="please_wait">Please wait…</string>
    <string name="gettingtoken_please_wait">Getting token, please wait</string>
    <string name="subscribing_offers_please_wait">Subscribing to offers, please wait</string>
    <string name="subscribe_failed">Subscribe failed</string>
    <string name="subscribe_complete">Subscribe Complete</string>
    <string name="crash_service">Crash Service</string>
    <string name="crash_test">Crash test</string>
    <string name="go_to_develop_quality_crash"><![CDATA[Go to Develop > Quality > Crash. The Crash page is displayed]]></string>
    <string name="analytics_kit">Analytics Kit</string>
    <string name="go_test">Go test</string>
    <string name="send_reply">Send reply</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="china_s_largest_and_most_famous_mobile_phone_sales_company">¿China\'s largest and most famous mobile phone sales company?</string>
    <string name="you_earned_d_points">You earned %d points</string>
    <string name="go_to_develop_quality_analytics"><![CDATA[Go to AppGallery Connect > Analytics > Click the name of an app > Advanced analysis > Dashboard > App overview. The Analytics page is displayed]]></string>
    <string name="remote_configuration">Remote Configuration</string>
    <string name="active_blue">Active blue</string>
    <string name="app_performance_management">App Performance Management</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="ads_kit">Ads Kit</string>
    <string name="banner_ads">Banner Ads</string>
    <string name="show_interstitial">Show interstitial</string>
</resources>
