<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".pushkit.PuskKitActivity">
<TextView
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="@color/colorPrimary"
    android:layout_marginTop="30dp"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/push_kit" />
<Button
    android:layout_marginBottom="20dp"
    android:textSize="20sp"
    android:paddingStart="60dp"
    android:paddingEnd="60dp"
    android:textAllCaps="false"
    android:text="@string/subscribe_to_offers"
    android:textColor="@color/blanco"
    android:layout_above="@+id/btn_get_token"
    android:layout_centerInParent="true"
    android:onClick="onSubscribeToOffers"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button
    android:textSize="20sp"
    android:paddingStart="60dp"
    android:paddingEnd="60dp"
    android:textAllCaps="false"
    android:text="@string/get_token"
    android:textColor="@color/blanco"
    android:id="@+id/btn_get_token"
    android:layout_centerInParent="true"
    android:onClick="onGetToken"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<TextView
    android:layout_marginTop="18dp"
    android:text="@string/app_name"
    android:textColor="@color/blanco"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/btn_get_token"
    android:id="@+id/tv_token"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<TextView
    android:onClick="onGoDocumentation"
    android:textStyle="bold"
    android:layout_marginBottom="20dp"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    android:text="@string/ver_documentaci_n"
    android:textColor="@color/blanco"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
</RelativeLayout>