<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crashservice.CrashServiceActivity">
    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crash_service" />
    <Button
        android:textSize="20sp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textAllCaps="false"
        android:text="@string/crash_test"
        android:textColor="@color/blanco"
        android:id="@+id/btn_crash_test"
        android:layout_centerInParent="true"
        android:onClick="onCrashTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="@string/go_to_develop_quality_crash"
        android:textColor="@color/blanco"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_crash_test"
        android:id="@+id/tv_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:onClick="onGoDocumentation"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ver_documentaci_n"
        android:textColor="@color/blanco"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>