<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="16dp"
    android:orientation="vertical"
    xmlns:hwads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adskit.AdsKitActivity">
    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/ads_kit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/banner_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.huawei.hms.ads.banner.BannerView
        android:id="@+id/hw_banner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        hwads:adId="testw6vs28auh3"
        hwads:bannerSize="BANNER_SIZE_360_57"/>
    <Button
        android:onClick="showInterstitial"
        android:text="@string/show_interstitial"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>