<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        android:drawableStart="@drawable/locationkit_icon"
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_location_kit"
        android:layout_above="@+id/btn_map_kit"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:onClick="onLocationKit"
        app:backgroundTint="@color/blanco"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        app:cornerRadius="30dp"
        android:text="@string/location_kit"/>

    <Button
        android:drawableStart="@drawable/mapkit_icon"
        android:id="@+id/btn_map_kit"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:onClick="onMapKit"
        app:backgroundTint="@color/blanco"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        app:cornerRadius="30dp"
        android:text="@string/map_kit"/>

</RelativeLayout>